feat: Add bruno + swagger atualizados
